--- a/week2.ipynb
+++ b/week2.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -208,18 +208,18 @@
     "                        transform=data_transform[\"val\"])\n",
     "\n",
     "img1_t, label = tensor_train_dataset[0]\n",
-    "print(\"type:{}\", \"label:{}\", \"shape:{}\", \"dtype:{}\".format(\n",
-    "                                                        type(img1_t),\n",
-    "                                                        label,\n",
-    "                                                        img1_t.shape,\n",
-    "                                                        img1_t.dtype))\n",
+    "print(\"type:{}, label:{}, shape:{}, dtype:{}\".format(\n",
+    "                                                type(img1_t),\n",
+    "                                                label,\n",
+    "                                                img1_t.shape,\n",
+    "                                                img1_t.dtype))\n",
     "\n",
     "img2_t, label = tensor_train_dataset[0]\n",
-    "print(\"type:{}\", \"label:{}\", \"shape:{}\", \"dtype:{}\".format(\n",
-    "                                                        type(img2_t),\n",
-    "                                                        label,\n",
-    "                                                        img2_t.shape,\n",
-    "                                                        img2_t.dtype))\n",
+    "print(\"type:{}, label:{}, shape:{}, dtype:{}\".format(\n",
+    "                                                type(img2_t),\n",
+    "                                                label,\n",
+    "                                                img2_t.shape,\n",
+    "                                                img2_t.dtype))\n",
     "\n"
    ]
   },
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"min:{}\", \"max:{}\".format(img1_t.min(), img1_t.max()))"
+    "print(\"min:{}, max:{}\".format(img1_t.min(), img1_t.max()))"
    ]
   },
   {
@@ -260,12 +260,12 @@
     "print(imgs.shape)\n",
     "mean = imgs.view(3, -1).mean(dim=1)\n",
     "std = imgs.view(3, -1).std(dim=1)\n",
-    "print(\"mean:{}\", \"std:{}\".format(mean, std))"
+    "print(\"mean:{}, std:{}\".format(mean, std))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchvision\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchvision\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m transforms\n\u001b[1;32m      5\u001b[0m image_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m32\u001b[39m\n",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchvision\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchvision\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m transforms\n\u001b[1;32m      5\u001b[0m image_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m32\u001b[39m\n",
       "File \u001b[0;32m~/Documents/Kosen/experiment/EE4/2F/EE4_2F-pytorch/myenv/lib/python3.12/site-packages/torchvision/__init__.py:10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Don't re-order these, we need to load the _C extension (done when importing\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# .extensions) before entering _meta_registrations.\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mextension\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m _HAS_OPS  \u001b[38;5;66;03m# usort:skip\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchvision\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m _meta_registrations, datasets, io, models, ops, transforms, utils  \u001b[38;5;66;03m# usort:skip\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mversion\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m __version__  \u001b[38;5;66;03m# noqa: F401\u001b[39;00m\n",
       "File \u001b[0;32m~/Documents/Kosen/experiment/EE4/2F/EE4_2F-pytorch/myenv/lib/python3.12/site-packages/torchvision/datasets/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_optical_flow\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m FlyingChairs, FlyingThings3D, HD1K, KittiFlow, Sintel\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_stereo_matching\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      3\u001b[0m     CarlaStereo,\n\u001b[1;32m      4\u001b[0m     CREStereo,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     12\u001b[0m     SintelStereo,\n\u001b[1;32m     13\u001b[0m )\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcaltech\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Caltech101, Caltech256\n",
       "File \u001b[0;32m~/Documents/Kosen/experiment/EE4/2F/EE4_2F-pytorch/myenv/lib/python3.12/site-packages/torchvision/datasets/_optical_flow.py:13\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mPIL\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimage\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m decode_png, read_file\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m _read_pfm, verify_str_arg\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvision\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m VisionDataset\n\u001b[1;32m     16\u001b[0m T1 \u001b[38;5;241m=\u001b[39m Tuple[Image\u001b[38;5;241m.\u001b[39mImage, Image\u001b[38;5;241m.\u001b[39mImage, Optional[np\u001b[38;5;241m.\u001b[39mndarray], Optional[np\u001b[38;5;241m.\u001b[39mndarray]]\n",
@@ -291,14 +291,173 @@
     "from torchvision import transforms\n",
     "\n",
     "image_size = 32\n",
-    "mean = (huge, huge, huge)\n",
-    "std = (foo, foo, foo)\n",
+    "mean = (hage, hige, huge)\n",
+    "std = (foo, bar, hoo)\n",
     "train_image_dir = \"data/train\"\n",
     "val_image_dir = \"data/val\"\n",
     "\n",
     "data_transform = {\n",
+    "    'train': transforms.Compose([transforms.RandomResizedCrop(image_size),\n",
+    "                                 transforms.ToTensor(),\n",
+    "                                 transforms.Normalize(mean, std)]),\n",
+    "\n",
+    "    'val': transforms.Compose([transforms.RandomResizedCrop(image_size),\n",
+    "                                 transforms.ToTensor(),\n",
+    "                                 transforms.Normalize(mean, std)])\n",
+    "}\n",
+    "\n",
+    "train_dataset = torchvision.datasets.ImageFolder(\n",
+    "                                        root=train_image_dir,\n",
+    "                                        transform=data_transform[\"train\"])\n",
+    "val_dataset = torchvision.datasets.ImageFolder(\n",
+    "                                    root=train_image_dir,\n",
+    "                                    transform=data_transform[\"val\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img, label = train_dataset[0]\n",
+    "plt.imshow(img.permute(1, 2, 0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 分類画像モデルの構築"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "device:cpu\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m device \u001b[38;5;241m=\u001b[39m (torch\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available() \u001b[38;5;28;01melse\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdevice:\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(device))\n\u001b[0;32m----> 6\u001b[0m train_loader \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mDataLoader(\u001b[43mtrain_dataset\u001b[49m, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      8\u001b[0m model \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mSequential(\n\u001b[1;32m      9\u001b[0m     nn\u001b[38;5;241m.\u001b[39mLinear(\u001b[38;5;241m3072\u001b[39m, \u001b[38;5;241m512\u001b[39m),\n\u001b[1;32m     10\u001b[0m     nn\u001b[38;5;241m.\u001b[39mTanh(),\n\u001b[1;32m     11\u001b[0m     nn\u001b[38;5;241m.\u001b[39mLinear(\u001b[38;5;241m512\u001b[39m, \u001b[38;5;241m2\u001b[39m),\n\u001b[1;32m     12\u001b[0m     nn\u001b[38;5;241m.\u001b[39mLogSoftmax(dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m))\u001b[38;5;241m.\u001b[39mto(device\u001b[38;5;241m=\u001b[39mdevice)\n\u001b[1;32m     14\u001b[0m learning_rate \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1e-2\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_dataset' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "device = (torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu'))\n",
+    "print(\"device:{}\".format(device))\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=8, shuffle=True)\n",
+    "\n",
+    "model = nn.Sequential(\n",
+    "    nn.Linear(3072, 512),\n",
+    "    nn.Tanh(),\n",
+    "    nn.Linear(512, 2),\n",
+    "    nn.LogSoftmax(dim=1)).to(device=device)\n",
+    "\n",
+    "learning_rate = 1e-2\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)\n",
+    "loss_fn = nn.NLLLoss()\n",
+    "n_ephocs = 50\n",
+    "\n",
+    "for epoch in range(n_ephocs):\n",
+    "    for imgs, labels in train_loader:\n",
+    "        imgs = imgs.to(device=device)\n",
+    "        labels = labels.to(device=device)\n",
+    "        batch_size = imgs.shape[0]\n",
+    "        outputs = model(imgs.view(batch_size, -1))\n",
+    "        loss = torch.tensor(loss_fn(outputs, labels))\n",
+    "        # ほんとは loss = loss_fn(outputs, labels)だけど、backward()がtensorクラスのものだから認識しない。上のでいけるか？\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
     "    \n",
-    "}\n"
+    "    print(\"Epoch:{}, Loss:{:.3f}\".format(epoch, float(loss)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (4032426503.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[9], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    for imgs, label in val_loader:\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=8, shuffle=False)\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "with torch.no_grad():\n",
+    "    for imgs, label in val_loader:\n",
+    "        imgs = imgs.to(device=device)\n",
+    "        labels = labels.to(device=device)\n",
+    "        batch_size = imgs.shape[0]\n",
+    "        outputs = model(imgs.view(batch_size, -1))\n",
+    "        _, predicted = torch.max(outputs, dim=1)\n",
+    "        correct += int((predicted == labels).sum())\n",
+    "    \n",
+    "print(\"Accuracy:{:.3f}\".format(float(correct/total)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 演習\n",
+    "### 1. エポック数 (学習回数)を変化させた時の損失関数の値と予測精度を調査する。\n",
+    "\n",
+    "pytable使って表を作れそう\n",
+    "https://qiita.com/arakiii/items/5bece948dd459b53d0b8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "# requires_grad=True のテンソル\n",
+    "x = torch.tensor(2.0, requires_grad=True)\n",
+    "\n",
+    "# y = x^2 の計算 (計算グラフが構築される)\n",
+    "y = x ** 2\n",
+    "\n",
+    "# backward() の呼び出し\n",
+    "y.backward()\n",
+    "\n",
+    "# 勾配を確認\n",
+    "print(x.grad)  # dy/dx = 2x = 4\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. 活性化関数を変えた場合の損失関数の値と予測制度を調査する。\n",
+    "ReLUにした場合　(epoch 10~100で10刻み)"
    ]
   },
   {
@@ -307,6 +466,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. ネットワークの構造を変えた場合の損失関数の値と予測精度を調査する。\n",
+    "活性化関数はReLUで"
+   ]
   }
  ],
  "metadata": {
