--- a/week3.ipynb
+++ b/week3.ipynb
@@ -12,15 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2891522770.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    from torch\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type:<class 'torch.Tensor'>, label:0, shape:torch.Size([3, 32, 32]), dtype:torch.float32\n"
      ]
     }
    ],
@@ -64,9 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conv2d(3, 16, kernel_size=(3, 3), stride=(1, 1))\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn as nn\n",
     "\n",
@@ -76,11 +83,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight: torch.Size([16, 3, 3, 3]), bias: torch.Size([16])\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"weight:{}, bias:{}\".format(conv.weight.shape, conv.bias.shape))"
+    "print(\"weight: {}, bias: {}\".format(conv.weight.shape, conv.bias.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "img_shape: torch.Size([1, 3, 32, 32])\n",
+      "output_shape: torch.Size([1, 16, 30, 30])\n"
+     ]
+    }
+   ],
+   "source": [
+    "img, label = tensor_train_dataset[0]\n",
+    "output = conv(img.unsqueeze(0))\n",
+    "print(\"img_shape: {}\".format(img.unsqueeze(0).shape))\n",
+    "print(\"output_shape: {}\".format(output.shape))"
    ]
   },
   {
@@ -88,12 +124,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "img, label = tensor_train_dataset[0]\n",
-    "output = conv(img.unsqueeze(0))\n",
-    "print(\"img_shape:{}\".format(img.unsqueeze(0).shape))\n",
-    "print(\"output_shape:{}\".format(output.shape))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
