[add] 最後までコードを記述

--- a/week3.ipynb
+++ b/week3.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -435,6 +435,7 @@
     }
    ],
    "source": [
+    "# code14\n",
     "import datetime\n",
     "\n",
     "device = (torch.device(\"cuda\") if torch.cuda.is_available()\n",
@@ -478,6 +479,7 @@
     }
    ],
    "source": [
+    "# code15\n",
     "import torch\n",
     "import torch.optim.sgd\n",
     "import torchvision\n",
@@ -527,6 +529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code16\n",
     "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=8, shuffle=False)\n",
     "\n",
     "def validate(model, train_loader, val_loader):\n",
@@ -547,11 +550,323 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "epochを10, 20, 30と変化させた時の損失関数の値、train_acc, val_accを調査する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Resarch about value of loss_fn, train_acc and val_acc\n",
+    "# Varying epochs 10, 20, 30"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 複雑なモデル\n",
+    "---\n",
+    "### 2.1 記憶容量の追加"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code17\n",
+    "class NetWidth(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
+    "        self.act1 = nn.Tanh()\n",
+    "        self.pool1 = nn.MaxPool2d(2)\n",
+    "        self.conv2 = nn.Conv2d(32, 16, kernel_size=3, padding=1)\n",
+    "        self.act2 = nn.Tanh()\n",
+    "        self.pool2 = nn.MaxPool2d(2)\n",
+    "        self.fc1 = nn.Linear(16*8*8, 32)\n",
+    "        self.act3 = nn.Tanh()\n",
+    "        self.fc2 = nn.Linear(32, 2)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.pool1(self.act1(self.conv1(x)))\n",
+    "        out = self.pool2(self.act2(self.conv2(out)))\n",
+    "        out = out.view(-1, 16*8*8)\n",
+    "        out = self.act3(self.fc1(out))\n",
+    "        out = self.fc2(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NetWidht()の学習(epoch=10, 20, 30)\n",
+    "# Resarch about value of loss function, train_acc and val_acc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 2.2 L2正規化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code18\n",
+    "def training_loop_l2reg(n_epochs, optimizer, model, loss_fn, train_loader):\n",
+    "    for epoch in range(1, n_epochs+1):\n",
+    "        loss_train = 0.0\n",
+    "        for imgs, labels in train_loader:\n",
+    "            imgs = imgs.to(device = device)\n",
+    "            labels = labels.to(device = device)\n",
+    "            outputs = model(imgs)\n",
+    "            loss  = loss_fn(outputs, labels)\n",
+    "            # -- l2reg --\n",
+    "            l2_lambda = 0.001\n",
+    "            l2_norm = sum(p.pow(2.0).sum() for p in model.parameters())\n",
+    "            loss = loss + l2_lambda * l2_norm\n",
+    "            # -- l2reg --\n",
+    "            optimeizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            loss_train += loss.item()\n",
+    "        if epoch == 1 or epoch % 10 == 0:\n",
+    "            porint(\"{} Epoch {}, Training loss {:2f}\".format(\n",
+    "                                                        datetime.datetime.now(),\n",
+    "                                                        epoch,\n",
+    "                                                        loss_train/len(train_loader)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Net(), NetWidht()をcode18を使用してが学習(epoch=30)\n",
+    "# Resarch about effect of L2 normalization\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 2.2 ドロップアウト"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NetDropout(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
+    "        self.act1 = nn.Tanh()\n",
+    "        self.pool1 = nn.MaxPool2d(2)\n",
+    "        self.conv1_dropout = nn.Dropout2d(p=0.4)\n",
+    "        self.conv2 = nn.Conv2d(32, 16, kernel_size=3, padding=1)\n",
+    "        self.act2 = nn.Tanh()\n",
+    "        self.pool2 = nn.MaxPool2d(2)\n",
+    "        self.conv2_dropout = nn.Dropout2d(p=0.4)\n",
+    "        self.fc1 = nn.Linear(16*8*8, 32)\n",
+    "        self.act3 = nn.Tanh()\n",
+    "        self.fc2 = nn.Linear(32, 2)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.pool1(self.act1(self.conv1(x)))\n",
+    "        out = self.conv1_dropout(out)\n",
+    "        out = self.pool2(self.act2(self.conv2(out)))\n",
+    "        out = self.conv2_dropout(out)\n",
+    "        out = out.view(-1, 16*8*8)\n",
+    "        out = self.act3(self.fc1(out))\n",
+    "        out = self.fc2(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NetDropout()の学習(epoch=30)\n",
+    "# use training_loop() from code14\n",
+    "# Resarch about Accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 2.3 バッチ正規化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NetBatchNorm(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
+    "        self.conv1_batchnorm = nn.BatchNorm2d(num_features=32)\n",
+    "        self.act1 = nn.Tanh()\n",
+    "        self.pool1 = nn.MaxPool2d(2)\n",
+    "        self.conv2 = nn.Conv2d(32, 16, kernel_size=3, padding=1)\n",
+    "        self.conv2_batchnorm = nn.BatchNorm2d(num_features=16)\n",
+    "        self.act2 = nn.Tanh()\n",
+    "        self.pool2 = nn.MaxPool2d(2)\n",
+    "        self.fc1 = nn.Linear(16*8*8, 32)\n",
+    "        self.act3 = nn.Tanh()\n",
+    "        self.fc2 = nn.Linear(32, 2)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.conv1_batchnorm(self.conv1(x))\n",
+    "        out = self.pool1(self.act1(out))\n",
+    "        out = self.conv2_batchnorm(self.conv2(out))\n",
+    "        out = self.pool2(self.act2(out))\n",
+    "        out = out.view(-1, 16*8*8)\n",
+    "        out = self.act3(self.fc1(out))\n",
+    "        out = self.fc2(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NetBatchNorm()の学習(epoch=30)\n",
+    "# use training_loop() from code14\n",
+    "# Resarch about Accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 2.4 深いネットワーク"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NetDepth():\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
+    "        self.act1 = nn.Tanh()\n",
+    "        self.pool1 = nn.MaxPool2d(2)\n",
+    "        self.conv2 = nn.Conv2d(32, 16, kernel_size=3, padding=1)\n",
+    "        self.act2 = nn.Tanh()\n",
+    "        self.pool2 = nn.MaxPool2d(2)\n",
+    "        self.conv3 = nn.Conv2d(16, 8, kernel_size=3, padding=1)\n",
+    "        self.act3 = nn.Tanh()\n",
+    "        self.pool3 = nn.MaxPool2d(2)\n",
+    "        self.fc1 = nn.Linear(8*4*4, 32)\n",
+    "        self.act4 = nn.Tanh()\n",
+    "        self.fc2 = nn.Linear(32, 2)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.pool1(self.act1(self.conv1(x)))\n",
+    "        out = self.pool2(self.act2(self.conv2(out)))\n",
+    "        out = self.pool3(self.act3(self.conv3(out)))\n",
+    "        out = out.view(-1, 8*4*4)\n",
+    "        out = self.act4(self.fc1(out))\n",
+    "        out = self.fc2(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NetDepth()の学習(epoch=30)\n",
+    "# use training_loop() from code14\n",
+    "# Resarch about Accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 2.5 スキップ接続"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NetRes():\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
+    "        self.act1 = nn.ReLU()\n",
+    "        self.pool1 = nn.MaxPool2d(2)\n",
+    "        self.conv2 = nn.Conv2d(32, 16, kernel_size=3, padding=1)\n",
+    "        self.act2 = nn.ReLU()\n",
+    "        self.pool2 = nn.MaxPool2d(2)\n",
+    "        self.conv3 = nn.Conv2d(16, 16, kernel_size=3, padding=1)\n",
+    "        self.act3 = nn.ReLU()\n",
+    "        self.pool3 = nn.MaxPool2d(2)\n",
+    "        self.fc1 = nn.Linear(16*4*4, 32)\n",
+    "        self.act4 = nn.ReLU()\n",
+    "        self.fc2 = nn.Linear(32, 2)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.pool1(self.act1(self.conv1(x)))\n",
+    "        out = self.pool2(self.act2(self.conv2(out)))\n",
+    "        out1 = out\n",
+    "        out = out.view(-1, 16*4*4)\n",
+    "        out = self.act4(self.fc1(out))\n",
+    "        out = self.fc2(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NetRes()の学習(epoch=30)\n",
+    "# use training_loop() from code14\n",
+    "# Resarch about Accuracy\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
